<?xml version="1.0"?>
<package format="3">
  <name>kuka_messages</name>
  <version>0.0.1</version>
  <description>Custom message package</description>
  <maintainer email="A.G.Metcalf@leeds.ac.uk">Adam Metcalf</maintainer>
  <license>Apache License 2.0</license>

  <!-- Member of rosidl_interface_packages group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

</package>

