<?xml version="1.0"?>
<package format="2">
  <name>robot_comms</name>
  <version>0.1.0</version>
  <description>A consolidated ROS2 package for robot communication nodes.</description>

  <maintainer email="A.G.Metcalf@leeds.ac.uk">Adam Metcalf</maintainer>
  <license>Apache License 2.0</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kuka_messages</build_depend>

  <!-- New dependency for heartbeat node -->
  <!-- No new dependencies are required for the heartbeat node -->

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kuka_messages</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

